# packrat

./: .gitignore  .gitmodules  Dockerfile  README.md  _config.yml  bench.md  ci_overview.html  config.json  index.html  requirements.txt  run.py  torchserve.md
.github/workflows/: python.yml
_data/: cloudlab.csv  skylake2x.csv
_includes/: footer.html  head.html  header.html  landing_head.html  menu.html
_layouts/: landing.html
_sass/: _layout.scss
benchmarks/: __init__.py  bench.py  bert.py  config.py  gpt2.py  inception.py  resnet.py
benchmarks/cache/: serde.py  shmem.py  store.py
css/: cover.css
estimator/: Cargo.toml
estimator/src/: consumer.rs  lib.rs  lib.rs.rs  loadgen.rs  main.rs  producer.rs  utils.rs
fpgen/: Cargo.toml  README.md  avx512f.S  build.rs
fpgen/src/: main.rs
loadgen/: Cargo.toml  README.md
loadgen/src/: memgen.rs
multiinstance/: bert_latency.csv  bert_throughput.csv  gpt2_throughput.csv  inception_latency.csv  inception_throughput.csv  parse.py  resnet_latency.csv  resnet_throughput.csv
multiinstance/cloudlab/: resnet_latency.csv  resnet_throughput.csv
multiinstance/cloudlab_tcmalloc_script/: resnet_latency.csv  resnet_throughput.csv
resnet/: index.markdown
scripts/: README.md  ci.bash  flops_bench.py  grow-rootfs.sh  mem_bench.py  plot.py  process_bench.py  record_freq.py  setup.sh  wss_estimation.py
tests/: tests_cache.py
torchserve/: README.md  config.properties  sample_text.txt
torchserve/scripts/: benchmark-ab.py  (+2 more)
utils/: bert.pickle  gpt2.pickle  inception.pickle  optimizer.py  resnet.pickle  topology.py
(+107 files in other folders)
