[package]
name = "fpgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fpgen"
path = "src/fpgen.rs"

[[bin]]
name = "memgen"
path = "src/memgen.rs"

[build-dependencies]
cc = "1.0.67"

[dependencies]
x86 = "0.51.0"
nix = "0.22.0"
log = "0.4.14"
env_logger = "0.9.0"
clap = "3.0.13"
cpu-freq = "0.0.2"
corealloc = "0.6.0"